# GeneticAlgorithm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
logic/: Config.cpp  Config.h  GraphActions.cpp  GraphActions.h  Logger.cpp  Logger.h  MyRand.cpp  MyRand.h  MyTypes.h  Solution.h
logic/algorithms/: GeneticAlgorithm.cpp  GeneticAlgorithm.h
logic/algorithms/crossovers/: ICrossover.h  MultipointCrossover.h  OrderCrossover.h  PMXCrossover.h
logic/algorithms/greedy/: IGreedy.h  NearestNeighbour.h  RandomAlgorithm.h
logic/algorithms/mutations/: IMutator.h  InverseMutation.h  ScrambleMutation.h  SwapMutation.h
